--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.5.1.js"></script>
+  <script src="js/scripts.js"></script>
+  <title>Mad Libs</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Please fill in the form!</h1>
+      <div>
+        <form id="formOne">
+          <div class="form-group"></div>
+            <label for="person1">A name</label>
+            <input id="person1" class="form-control" type="text">
+          </div>
+
+          <div class="form-group"></div>
+            <label for="perso2">A name</label>
+            <input id="person2" class="form-control" type="text">
+          </div>
+        </form>
+      </div>
+
+      <div id="story">
+          <h1>Our day in class</h1> 
+          <p>
+            Today, <span class="person1"></span> and <span clas="person2"></span> are trying their hardest to understand the day's lessons. However, our heros are very tired and having trouble with brain function. <span class="person1"></span> can't stop yawning!
+          </p>
+      </div>
+  </div>
 </body>
 </html>
