fix sytax errors in HTML, fix div placement, move button inside form
Co-authored-by: Mook Dang <mookdang24@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
     <h1>Please fill in the form!</h1>
       <div>
         <form id="formOne">
-          <div class="form-group"></div>
+          <div class="form-group">
             <label for="person1">A name</label>
             <input id="person1" class="form-control" type="text">
           </div>
-
-          <div class="form-group"></div>
-            <label for="perso2">A name</label>
+          <div class="form-group">
+            <label for="person2">Another name</label>
             <input id="person2" class="form-control" type="text">
           </div>
+
+          <button type="submit" class="btn">Show me the story!</button>
         </form>
       </div>
 
       <div id="story">
-          <h1>Our day in class</h1> 
-          <p>
-            Today, <span class="person1"></span> and <span clas="person2"></span> are trying their hardest to understand the day's lessons. However, our heros are very tired and having trouble with brain function. <span class="person1"></span> can't stop yawning!
-          </p>
-      </div>
+        <h1>Our day in class</h1> 
+        <p>
+          Today, <span class="person1"></span> and <span class="person2"></span> are trying their hardest to understand the day's lessons. However, our heros are very tired and having trouble with brain function. <span class="person1"></span> can't stop yawning!
+        </p>
+    </div>
   </div>
 </body>
 </html>
